2003-09-23  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* GNUmakefile (upload): call chgrp.

2003-09-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/download/windows.html: Add downloadable link to
	example-1.ly and instruction to double click.

2003-09-22  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/devel/packaging.html (cygwin): Add note about autogen.sh.

2003-09-22  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* site/about/automated-engraving/big-page.py: collate pages,
	revise links.

	* GNUmakefile (scripts): add

2003-09-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/download/index.html: Update Cygwin info.

	* site/devel/packaging.html: Update Cygwin native and cross
	packaging instructions.

2003-09-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* site/images/ : add examples PNG in v2 syntax

2003-08-29  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* site/index.html: add magical "notation" word.

	* site/about/automated-engraving/benchmarking.html: add note about
	missing notes.

2003-08-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/devel/packaging.html: Add pfaedit urls.

	* site/download/index.html: Update.

2003-08-28  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* GNUmakefile (upload): commit automatically on upload.

2003-08-27  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* site/about/automated-engraving/index.html: spice up toc.

	* site/download/index.html (href): add slackware download.

2003-08-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* site/index.html (href): add planetccrma news.

2003-08-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/devel/packaging.html: Update.

2003-08-18  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* site/download/index.html (href): update RH planetccrma listing.

	* site/index.html (different): ms manners iso. miss manners

2003-08-11  Graham Percival  <gperlist@shaw.ca>

	* site/index.html: fix spelling (esthetics -> aesthetics).

	* site/switch/testimonials.html: edit quote, add minor personal info.
